deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  # revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: mimani/sample-server:latest
        name: server-app
        ports:
        - containerPort: 3000
