deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  ports:
  - name: http
    port: 80
    targetPort: 3000
  selector:
    app: server
