deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-url
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-srv
            port:
              number: 80
