deployment/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 1
  # revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - image: server:1.0.0
        name: server-app
        ports:
        - containerPort: 3000
----
apiVersion: v1
kind: Service
metadata:
  name: server-srv
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: server
----
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-url
spec:
  rules:
  - http:
      paths:
      - path: /server
        pathType: Prefix
        backend:
          service:
            name: server-srv
            port:
              number: 80
